--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -1,6 +1,7 @@
 info: La Conferenza
 call_for_paper: Call for Paper
 speakers: Il Programma
+announcements: Gli Speaker
 workshop: Il Workshop
 tickets: Registrati
 location: La Location
