--- a/_data/config.yml
+++ b/_data/config.yml
@@ -1,4 +1,6 @@
-call_for_paper: true
-speakers: false
-workshop: false
+call_for_paper: false
+speakers: true
+workshop: true
 partner: true
+tickets: true
+tickets_url: https://eventbrite.com/tickets-external?eid=39908587660&ref=etckt
